Fixes for flex wrap behavior in unsupported browsers

--- a/css-compiled/template.css
+++ b/css-compiled/template.css
@@ -605,6 +605,9 @@ ul.pagination {
         font-size: 1rem; } }
   .modular .features .feature-items {
     margin-top: 2rem; }
+    @supports not (flex-wrap: wrap) {
+      .modular .features .feature-items {
+        overflow: hidden; } }
   .modular .features .feature {
     display: block;
     float: left;
